# crepe

./: README.md  pyproject.toml  requirements.txt
crepe/: cli.py  core.py
tests/: test_sweep.py
