[project]
name = "crepe"
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "Hadrien Titeux", email = "hadrien.titeux@ens.psl.eu" },
    { name= "Jong Wook Kim", email="jongwook@nyu.edu"}
]
requires-python = ">=3.7"
keywords = []
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["crepe*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
crepe = "crepe.cli:main"



